syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "UpdateOneChangesetProto";

package liquibase;

service UpdateOneChangesetService {
  rpc execute(UpdateOneChangesetRequest) returns (Response) {}
}

/* [PRO]
Runs single changeset */
message UpdateOneChangesetRequest {
  optional string change_exec_listener_class = 1; // Fully-qualified class which specifies a ChangeExecListener
  optional string change_exec_listener_properties_file = 2; // Path to a properties file for the ChangeExecListenerClass
  string changelog_file = 3; // *required* The root changelog file
  string changeset_author = 4; // *required* Author of the changeset to execute
  string changeset_id = 5; // *required* Id of the changeset to execute
  string changeset_path = 6; // *required* Path to the changeset to execute
  optional string context_filter = 7; // Context string to use for filtering
  optional string default_catalog_name = 8; // The default catalog name to use for the database connection
  optional string default_schema_name = 9; // The default schema name to use for the database connection
  optional string driver = 10; // The JDBC driver class
  optional string driver_properties_file = 11; // The JDBC driver properties file
  optional bool force = 12; // A required safety flag to indicate you intend to use this feature
  optional string label_filter = 13; // Label expression to use for filtering
  optional string password = 14; // Password to use to connect to the database
  optional bool report_enabled = 15; // [PRO] Enable or disable reporting.
  optional string report_name = 16; // [PRO] The name of the report.
  optional string report_path = 17; // [PRO] The path to the directory to generate the report.
  optional bool rollback_on_error = 18; // If set to true and any changeset in a deployment fails, then the update operation stops, and liquibase attempts to rollback all changesets just deployed. A changeset marked "fail-on-error=false" does not trigger as an error, therefore rollback-on-error will not occur. Additionally, if a changeset is not auto-rollback compliant or does not have a rollback script, then no rollback-on-error will occur for any changeset.
  string url = 19; // *required* The JDBC database connection URL
  optional string username = 20; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 21;
}

message Response {
  string message = 1;
}
